k8s/mysql.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: hunarguru 
  labels:
    app: mysql
spec:
  clusterIP: None
  selector:
    app: mysql
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  namespace: hunarguru
spec:
  serviceName: mysql
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers: 
        - name: mysql
          image: mysql:8.4
          imagePullPolicy: IfNotPresent
          ports: 
            - name: mysql
              containerPort: 3306
          volumeMounts:
            - name: data
              mountPath: /var/lib/mysql
            - name: init
              mountPath: /docker-entrypoint-initdb.d
              readOnly: true
          resources: 
            requests:
              cpu: 100m
              memory: 256Mi
            limits: 
              memory: 512Mi
          livenessProbe:
            tcpSocket: 
              port: 3306
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            exec:
              command: [mysqladmin,ping, -h, localhost]
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 3   
      volumes:
        - name: init
          configMap:
            name: mysql-init
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
